# CMake_install-static-library

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: StaticLib.h
src/: StaticLib.cpp
tests/: test_staticlib.cpp
